--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Daily Quote</h1>
     <h3>Enrich your day with an inspiring quote</h3>
     <a href="quote.html" class="button">Get Inspired</a>
-    <a href="https://github.com/AimanK" class="github-button" target="_blank">View Source Code</a>
+    <a href="https://github.com/AimanK/InspiringQuoteGenerator" class="github-button" target="_blank">View Source Code</a>
     
     <section class="footer">
       <h4>Created by Aiman Kayad. 2021</h4>
